# tunet-c

./: .gitignore  .gitmodules  LICENSE  Makefile.am  OpenWrt.mk  README.md  autogen.sh  cli.c  configure.ac  tunet.c  tunet.h
jni/: Android.mk  tunet-jni.c
lib/: Makefile.am  list.c  list.h  parser.c  parser.h  portal.c  portal.h  utf.c  utf.h
openwrt/: Makefile
openwrt/libtidy/: Makefile
openwrt/libtidys/: Makefile
openwrt/tunet/: Makefile
src/: Makefile.am  cli.c  tunet.c  tunet.h
test/: encode.test.c  encode_test.c  list.test.c  list_test.c
